--- a/_config.yml
+++ b/_config.yml
@@ -404,7 +404,7 @@ gitment:
   repo: Cflelf.github.io
   ClientID: 0c586dfbc4fa5d6816eb
   ClientSecret: 26dd28c1fa25e6eed7947da6b52ccf5fe784eaa7
-  lazy: true
+  lazy: false
 
 # Support for youyan comments system.
 # You can get your uid from http://www.uyan.cc
