--- a/_config.yml
+++ b/_config.yml
@@ -401,7 +401,7 @@ changyan:
 gitment:
   enable: true
   githubID: Cflelf
-  repo: cflelf.github.io
+  repo: Cflelf.github.io
   ClientID: 0c586dfbc4fa5d6816eb
   ClientSecret: 26dd28c1fa25e6eed7947da6b52ccf5fe784eaa7
   lazy: false
